# themathguysbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.github/: FUNDING.yml
tmg_bot/: __main__.py  ai.py  client.py  function_plot.py  instructions.py  locks.py  regex.py  supabase_client.py  tex_templates.py  title_animation.py  tools.py  utils.py
